2002-06-17  Glynn Foster <glynn.foster@sun.com>

	* configure.in: release 2.0.0 " Zivot je jinde"
	* NEWS, README, THANKS, HACKING, AUTHORS: Updates for new release.

2002-06-10  Glynn Foster <glynn.foster@sun.com>

	* configure.in: release 1.109.0 " Oh so nearly, but not quite "
	* NEWS, README, THANKS: Updates for new release.
	* ChangeLog: George & Malcolm are lazy asses. Move stuff around.

2002-06-05  Yanko Kaneti <yaneti@declera.com>

	* configure.in: (ALL_LINGUAS) Added Bulgarian (bg).

2002-06-03  Glynn Foster  <glynn.foster@sun.com>

	* configure.in: release 1.108.0 " This ain't no disco "
	* NEWS, README: Updates for new release.

2002-06-02  Glynn Foster  <glynn.foster@sun.com>

	* splash/*, gpenguin/*, gsu/*, idetool/*: Cruft Removal - Part III.

2002-06-02  Glynn Foster  <glynn.foster@sun.com>

	* idl/*: Cruft Removal - Part II.

2002-05-31  Hidetoshi Tajima <hidetoshi.tajima@sun.com>

	* configure.in: update for #83627.

2002-05-31  Glynn Foster <glynn.foster@sun.com>

	* configure.in: Enable logview/help.

2002-05-28  Glynn Foster <glynn.foster@sun.com>

	* configure.in: release 1.107.0 " 69036' 45030' N - mmm "
	* NEWS, README, MAINTAINERS: Updates for new release.

2002-05-27  Hasbullah Bin Pit <sebol@ikhlas.com>

	* THANKS: Added Mohamad Afifi Omar (App) <mr_mohd_afifi@yahoo.com>
	  (original translator for ms)

2002-05-20  Glynn Foster  <glynn.foster@sun.com>

	* configure.in: Remove idl.
	* Makefile.am: Remove building of idl.

2002-05-20  Glynn Foster  <glynn.foster@sun.com>

	* configure.in: Remove logview/help.

2002-05-20  Glynn Foster  <glynn.foster@sun.com>

	* configure.in: release 1.106.0 'Not yet a Plaything'.
	NEWS, README: Updates for new release.

2002-05-17  Glynn Foster  <glynn.foster@sun.com>

	* README: Update for the 1.105.0 release.

2002-05-14  Glynn Foster  <glynn.foster@sun.com>

	* configure.in: release 1.105.0 'I'm just a Toy'.
	  NEWS: Updates for new release.

2002-05-09  Glynn Foster  <glynn.foster@sun.com>
