@@ -1,5 +1,0 @@
-Makefile.in
-Makefile
-splash
-splac
-.deps
