@@ -1,1 +1,0 @@
-Alan Cox <alan@redhat.com>
