@@ -1,21 +1,0 @@
-## Process this file with automake to produce makefile.in
-
-INCLUDES = -I$(includedir) 				\
-	-DGNOMELOCALEDIR=\""$(datadir)/locale"\" 	\
-	-DLOCALEDIR=\"$(datadir)/locale\"		\
-	$(GNOME_UTILS_CFLAGS)
-
-bin_PROGRAMS = splash splac
-
-splash_SOURCES = \
-	main.c	\
-	splash.h
-
-splac_SOURCES = \
-	splac.c
-
-splash_LDADD = $(GNOME_UTILS_LIBS) $(INTLLIBS)
-
-man_MANS = splash.1 splac.1
-
-EXTRA_DIST = splash.1 splac.1
