@@ -1,22 +1,0 @@
-Splash renders splash screens for installers and other
-non GUI aware application code. If invoked from a  non
-X11 environment it remains silent but runs the client
-code. It displays the selected xpm images centered on
-the display and shaped according to the mask of the xpm
-(if you want to no shape use no mask..)
-
-Execution
-
-	splash logoscreen.xpm program-or-script
-
-Within the script
-
-	splac -title string
-
-Sets the window title for the logo
-
-	splac -image new.xpm
-
-Changes the image. The new image need not be the same size.
-
-
