@@ -1,1 +1,0 @@
-.so man1/splash.1
