@@ -1,50 +1,0 @@
-.\" splash.1 - splash screen renderer
-.\" Copyright 2001  Jochen Voss
-.TH splash 1 "Apr 21 2001" "gnome-utils 1.4.0"
-.SH NAME
-splash, splac \- a splash screen renderer
-.SH SYNOPSIS
-.B splash
-.I logo.xpm program-or-script
-.sp
-.B splac title
-.I string
-.sp
-.B splac image
-.I new.xpm
-.SH DESCRIPTION
-.B Splash
-renders splash screens for installers and other
-non GUI aware application code.  If invoked from a non
-X11 environment it remains silent but runs the client
-code.  It displays the selected xpm images centered on
-the display and shaped according to the mask of the xpm.
-(If you want to no shape use no mask.)
-.PP
-.B splash
-opens a window to display the image gives as the first argument.
-This must be a
-.I .xpm
-file.  Then it starts the script given as the second argument.
-.PP
-.B splac
-should only be called from within this script.
-It accepts the following arguments:
-.TP
-.B image
-.I new.xpm
-Changes the image to
-.IR new.xpm .
-.TP
-.B title
-.I string
-Sets the window title to
-.IR string .
-The new image need not be the same size.
-
-.SH AUTHOR
-.B splash
-was written by Alan Cox <alan@redhat.com>
-.PP
-This manual page was written by Jochen Voss
-<voss@mathematik.uni-kl.de>.
