@@ -1,19 +1,0 @@
-2001-10-13  Bastien Nocera  <set EMAIL_ADDRESS environment variable>
-
-	* Makefile.am, main.c: (display_errors): started port to Gnome2
-
-2000-07-19  Kjartan Maraas  <kmaraas@gnome.org>
-
-	* splac.c: Added #include <unistd.h> for write().
-	
-1998-12-19  Herbert Valerio Riedel  <hvr@hvrlab.ml.org>
-
-	* splac.c: added #include <string.h>
-
-1998-07-31  Alan Cox <alan@redhat.com>
-
-	*	Fixed fd handling bug
-	*	Added X awareness - splash skips doing logo screens
-		if there is no $DISPLAY present.
-	*	Capture stderr diagnostics and display them in a dialog box
-		at the end if need be.
