@@ -1,3 +1,7 @@
+2002-07-05  Glynn Foster <glynn.foster@sun.com>
+
+	* splash/*: Remove cruft.
+
 2002-06-17  Glynn Foster <glynn.foster@sun.com>
 
 	* configure.in: release 2.0.0 " Zivot je jinde"
